# research_to_life

./: README.md  demo.py  language_models_are_injective_demo.py  paper.md  pyproject.toml
__marimo__/session/: language_models_are_injective_demo.py.json  language_models_are_injective_demo_gemma.py.json  notebook.py.json
